<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/enter_code_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_room_code"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="30sp"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/font2"
            />

        <EditText
            android:id="@+id/code_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font2"
            android:textAlignment="center"
            android:hint="@string/input_code"
            android:textColor="@color/black"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/join_to_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/font2"
            android:background="@color/blackCB"
            />
    </LinearLayout>

</RelativeLayout>