<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_mode_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    tools:context=".GameModeActivity">

    <ImageView
        android:id="@+id/back_button_in_mode_activity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/back_button"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/which_mode_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/font1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/change_user_button"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            android:src="@drawable/change_user" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/choose_mode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/font1"
            android:text="@string/choose_mode"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:textSize="20sp" />

        <TextView
            android:id="@+id/online_game_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/blue_tablet1"
            android:fontFamily="@font/font1"
            android:gravity="center_horizontal"
            android:paddingHorizontal="30dp"
            android:paddingTop="8dp"
            android:text="@string/game_online"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/friend_game_button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/blue_tablet1"
            android:fontFamily="@font/font1"
            android:gravity="center_horizontal"
            android:paddingHorizontal="30dp"
            android:paddingTop="8dp"
            android:text="@string/game_with_friends"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>